Resolve o problema com a hash, porem torna ela menos generica